replaces istanbul by nyc

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Currency conversion microservice",
   "main": "index.js",
   "scripts": {
-    "cover": "NODE_ENV=test istanbul cover -x '*test.js' _mocha -- -R spec",
-    "check-coverage": "istanbul check-coverage --statements 90 --branches 90 --functions 90 --lines 90",
+    "cover": "nyc --reporter=lcov --reporter=text npm test",
+    "check-coverage": "nyc check-coverage --statements 90 --branches 90 --functions 90 --lines 90",
     "check-lint": "eslint *.js lib/*.js test/*.js routes/*.js",
     "fix-lint": "eslint --fix *.js lib/*.js test/*.js routes/*.js",
     "eureka": "docker start eureka 2> /dev/null || docker run -d -p 8080:8080 --name eureka netflixoss/eureka:1.3.1",
@@ -15,7 +15,7 @@
     "fake-config-server-start": "npm run fake-config-server-stop &> /dev/null; sleep 1; fake-config-server >> logs/fake-config-server.log 2>&1 & echo PID=$!",
     "fake-config-server-stop": "killall -9 fakeConfigServer",
     "dev": "nodemon -r 'dotenv/config' cluster.js || echo 'Please install nodemon globaly' && echo npm install -g nodemon",
-    "test": "NODE_ENV=test LOG_LEVEL=test mocha -R spec"
+    "test": "NODE_ENV=test LOG_LEVEL=test  mocha --check-leaks -R spec"
   },
   "config": {
     "ghooks": {
@@ -38,24 +38,24 @@
   },
   "homepage": "https://github.com/EveryMundo/currency-conversion-service#readme",
   "devDependencies": {
-    "@everymundo/cleanrequire": "^1.1.1",
+    "@everymundo/cleanrequire": "^1.2.0",
     "@everymundo/fake-config-server": "^1.2.1",
-    "chai": "^4.1.2",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "istanbul": "^1.1.0-alpha.1",
+    "chai": "^4.2.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "mocha": "^5.2.0",
-    "sinon": "^5.0.10"
+    "nyc": "^13.1.0",
+    "sinon": "^7.2.2"
   },
   "dependencies": {
-    "@everymundo/em-eureka": "^1.7.0",
+    "@everymundo/em-eureka": "^1.9.0",
     "@everymundo/generate-microservice-name": "^1.1.1",
     "@everymundo/global-root-dir": "^1.1.0",
     "@everymundo/runner": "^1.1.0",
-    "dotenv": "^5.0.1",
+    "dotenv": "^6.2.0",
     "em-logr": "^1.2.0",
-    "fastify": "^1.5.0",
-    "fastify-helmet": "^1.0.3",
-    "fastify-swagger": "^0.11.0",
+    "fastify": "^1.13.2",
+    "fastify-helmet": "^3.0.0",
+    "fastify-swagger": "^0.16.2",
     "ghooks": "^2.0.4",
     "ip": "^1.1.5",
     "microtime": "^2.1.8"
